--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:8000",
+    "proxy": "https://crm.keddytech.in",
 
     "dependencies": {
         "@testing-library/dom": "^10.4.1",
