--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "proxy": "https://crm.keddytech.in",
-
     "dependencies": {
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
@@ -13,6 +12,7 @@
         "react-dom": "^19.2.4",
         "react-router-dom": "^7.13.0",
         "react-scripts": "5.0.1",
+        "react-toastify": "^11.0.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
